# SARA

./: .env_template  .gitignore  Home.py  Makefile  README.md  app.py  entity_extraction.py  old_app.py  pyproject.toml  requirements.txt  t2.py  test.py
.streamlit/: config.toml
contradictions/: test.json  test.py
notebooks/: 1_dataset.ipynb  2_metadata.ipynb  3_filter_dataset.ipynb  4_getting_started_llms.ipynb  dataset.ipynb  filter_dataset.ipynb  getting_started_llms.ipynb  llm_rag_demo.ipynb  metadata.ipynb
pages/: 01_Archive.py  01_Article_Analysis.py  01_Explorer.py
rag/: ask_rag.py  create_rag.py  ids.csv
src/: articles.py  llm.py  prompts.py
