[project]
name = "hackathon-march-2025"
version = "0.1.0"
description = "AIM Hackathon together with Media Innovation Lab on 22.03.2025"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.10.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-core>=0.3.40",
    "langchain-openai>=0.3.7",
    "markdown2>=2.5.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "openai>=1.65.2",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "python-pptx>=1.0.2",
    "requests>=2.32.3",
    "sentence-transformers>=3.4.1",
    "tiktoken>=0.9.0",
]
